test/files/neg/t5735.check
t5735.scala:6: error: type mismatch;
 found   : String
 required: Int
  val z: Int = a
               ^
1 error
